--- a/app/htmlparts/toolbox.html
+++ b/app/htmlparts/toolbox.html
@@ -7,7 +7,7 @@
 
 <div id="mic-access-tool-box" class="mic-access-tool-box">
 <div class="mic-access-tool-box-header">
-	acc toolbox
+	Accessiblity Widget
 	<button title="'+ obj.btn_close +'" id="mic-access-tool-box-close-button">&#10007; - '+ obj.btn_close +'</button>
 </div>
 
@@ -120,8 +120,8 @@
 	</button>
 </div>
 
-<div dir="ltr" class="mic-toolbox-all-credits">
+<!-- <div dir="ltr" class="mic-toolbox-all-credits">
 	<span>learn more about</span>&nbsp;&nbsp;<a target="_blank" href="http://webworks.ga/acc_toolbar">toolbox</a>
-</div>
+</div> -->
 
 </div>
