--- a/app/index.html
+++ b/app/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title>Accessibility Toolbar Plugin</title>
+    <meta name="description" content="" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <!-- <script src="minjs/zur.min.js"></script> -->
+    <!-- <script src="minjs/common.js"></script> -->
+    <!-- <script src="minjs/common.min.js"></script> -->
+    <script src="js/common.js"></script>
+    <!-- <script src="js/common.min.js"></script> -->
 
-<head>
-	<meta charset="utf-8">
-	<title>Accessibility Toolbar Plugin</title>
-	<meta name="description" content="">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<!-- <script src="minjs/zur.min.js"></script> -->
-	<!-- <script src="minjs/common.min.js"></script> -->
+    <!-- Production script -->
+    <script src="acctoolbar/acctoolbar.js"></script>
+    <!-- <script src="../acctoolbar/acctoolbar.min.js"></script> -->
 
-	<!-- Production script -->
-	<script src="../acctoolbar/acctoolbar.min.js"></script> 
+    <!-- CDN -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script> -->
+    <style>
+      body {
+        background-color: #ddd;
+        font-size: 40px;
+        transition: all 1s;
+      }
+      a {
+        transition: all 1s;
+      }
+    </style>
+  </head>
 
-	<!-- CDN -->
-	<!-- <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script> -->
-<style>
-	body {
-		background-color: #ddd;
-		font-size: 40px;
-		transition: all 1s;
-	}
-	a {
-		transition: all 1s;
-	}
-</style>
-</head>
+  <body>
+    <img src="https://picsum.photos/200" alt="sample text" />
+    <img src="https://picsum.photos/200" alt="" />
+    <h1>H1 ndsadsda</h1>
+    <h2>H2 sdfskafksdjf</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
 
-<body>
-<img src="https://picsum.photos/200" alt="sample text">
-<img src="https://picsum.photos/200" alt="">
-<h1>H1 ndsadsda</h1>
-<h2>H2 sdfskafksdjf</h2>
-<p>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
-
-<script>
-	window.onload = function() {	
-  window.micAccessTool = new MicAccessTool({
-  	forceLang: "ru-RU",
-  	link: 'https://acctoolbar.ml',
-    contact: 'mailto:mickidum@gmail.com'
-  });
-};
-
-</script>
-</body>
+    <script>
+      window.onload = function() {
+        window.micAccessTool = new MicAccessTool({
+          forceLang: "en"
+          // link: 'https://acctoolbar.ml',
+          // contact: 'mailto:mickidum@gmail.com'
+        });
+      };
+    </script>
+  </body>
 </html>
