fix the big cursor

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- <script src="js/common.min.js"></script> -->
 
     <!-- Production script -->
-    <script src="acctoolbar/acctoolbar.js"></script>
+    <!-- <script src="acctoolbar/acctoolbar.js"></script> -->
     <!-- <script src="../acctoolbar/acctoolbar.min.js"></script> -->
 
     <!-- CDN -->
