add screen reader feature

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
       est laborum.
     </p>
 
+    <script src="js/readpage.js"></script>
+
     <script>
       window.onload = function() {
         window.micAccessTool = new MicAccessTool({
