add read page feature

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       est laborum.
     </p>
 
-    <script src="js/readpage.js"></script>
+    <!-- <script src="js/readpage.js"></script> -->
 
     <script>
       window.onload = function() {
